# bubble_engine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  build_all.sh  build_editor.sh  build_runtime.sh  golfgamestate.txt  run_tests.sh  scirpt.py  teste.sh
.github/: FUNDING.yml
.github/templates/: bug_report.md  feature_request.md  pull_request_template.md
.github/workflows/: build_and_test.yml
becommons/: CMakeLists.txt  becommons.hpp
becommons/include/: becommons.hpp  namespace.hpp
becommons/include/api/: api_lua.hpp  mat.hpp
becommons/include/arquivadores/: fonte.hpp  imageloader.hpp  modelo.hpp  shader.hpp
becommons/include/assets/: fontes_na_memoria.hpp  imagems_na_memoria.hpp  shaders_na_memoria.hpp
becommons/include/assets/fontes/consolas/: Consola.hpp  Consolas.hpp  consolai.hpp  consolaz.hpp
becommons/include/assets/fontes/minecraft/: minecraft_font.hpp
becommons/include/assets/fontes/noto_sans/: noto_bold.hpp  noto_italic.hpp  noto_regular.hpp
becommons/include/assets/imagems/: DaylightBox_Back.hpp  DaylightBox_Bottom.hpp  DaylightBox_Front.hpp  DaylightBox_Left.hpp  DaylightBox_Right.hpp  DaylightBox_Top.hpp  abrir.hpp  adicionar.hpp  arco_cor.hpp  banner.hpp  camera.hpp  check.hpp  close.hpp  codigo.hpp  cube.hpp  cubo_branco.hpp  fisica.hpp  folder.hpp  icon.hpp  iluminacao.hpp  info.hpp  joystick.hpp  lua.hpp  options.hpp  play.hpp  python.hpp  remover.hpp  renderizador.hpp  scene.hpp  stop.hpp  terreno.hpp  test.py  teste.hpp  tool.hpp  transformacao.hpp
becommons/include/assets/objetos/: cubo.hpp  esfera.hpp
becommons/include/assets/shaders/: framebuffer_frag.hpp  imagem_frag.hpp  imagem_vert.hpp  outline_frag.hpp  outline_vert.hpp  phong_frag.hpp  phong_vert.hpp  quad_frag.hpp  quad_vert.hpp  skybox_frag.hpp  skybox_vert.hpp  sombra_frag.hpp  sombra_vert.hpp  texto_frag.hpp  texto_vert.hpp
becommons/include/componentes/: camera.hpp  camera_editor.hpp  codigo.hpp  componente.hpp  disposicao.hpp  fisica.hpp  imagem.hpp  luz_direcional.hpp  luz_pontual.hpp  propriedades.hpp  renderizador.hpp  terreno.hpp  texto.hpp  transformacao.hpp
becommons/include/depuracao/: assert.hpp  debug.hpp
becommons/include/elementos/: area_de_texto.hpp  area_de_toque.hpp  barra_menu.hpp  botao.hpp  caixa_de_texto.hpp  docking.hpp  gerenciador_projetos.hpp  imagem.hpp  painel.hpp  popup.hpp  texto.hpp
becommons/include/entidades/: entidade.hpp
becommons/include/iluminacao/: direcional.hpp  holofote.hpp  luz.hpp  luz_pontual.hpp  pontual.hpp
becommons/include/inputs/: inputs.hpp
becommons/include/nucleo/: engine.hpp  fase.hpp  levelmanager.hpp  projeto.hpp  registro.hpp  sistema.hpp  sistema_de_codigo.hpp  sistema_de_fisica.hpp  sistema_de_interface.hpp  sistema_de_renderizacao.hpp
becommons/include/os/: janela.hpp  sistema.hpp  tempo.hpp
becommons/include/sistemas/: bubble_gui.hpp  editor.hpp  interface.hpp  sistema.hpp  sistema_de_codigo.hpp  sistema_de_fisica.hpp  sistema_de_renderizacao.hpp
becommons/include/util/: caixa.hpp  cor.hpp  malha.hpp  material.hpp  pipeline.hpp  raio.hpp  skybox.hpp  textura.hpp  versao.hpp  vertice.hpp  vetor2.hpp  vetor3.hpp  vetor4.hpp
becommons/src/api/: api_lua.cpp
becommons/src/arquivadores/: fonte.cpp  imageloader.cpp  modelo.cpp  shader.cpp
becommons/src/componentes/: camera.cpp  camera_editor.cpp  codigo.cpp  fisica.cpp  luz_direcional.cpp  renderizador.cpp  terreno.cpp  transformacao.cpp
becommons/src/elementos/: area_de_texto.cpp  area_de_toque.cpp  docking.cpp  gerenciador_projetos.cpp  painel.cpp  popup.cpp  texto.cpp
becommons/src/entidades/: entidade.cpp
becommons/src/inputs/: inputs.cpp
becommons/src/nucleo/: engine.cpp  fase.cpp  levelmanager.cpp  projeto.cpp  registro.cpp  sistema.cpp  sistema_de_codigo.cpp  sistema_de_fisica.cpp  sistema_de_interface.cpp  sistema_de_renderizacao.cpp
becommons/src/os/: janela.cpp
becommons/src/sistemas/: bubble_gui.cpp  editor.cpp  interface.cpp  sistema_de_codigo.cpp  sistema_de_fisica.cpp  sistema_de_renderizacao.cpp
becommons/src/util/: caixa.cpp  malha.cpp  material.cpp  pipeline.cpp  skybox.cpp
docs/: CNAME  Doxyfile  Doxyfile_en  Doxyfile_pt  HOMEPAGE.md  README_en.md  README_pt.md  annotated.html  annotated_dup.js  classes.html  dir_000000_000006.html  dir_000003_000011.html  dir_000005_000002.html  dir_000005_000027.html  dir_000005_000029.html  dir_000009_000013.html  dir_000009_000017.html  dir_000009_000027.html  dir_000010_000014.html  dir_000014_000011.html  dir_000015_000002.html  dir_000015_000010.html  dir_000016_000011.html  dir_000017_000027.html  dir_000017_000029.html  dir_000018_000011.html  dir_000020_000002.html  dir_000020_000015.html  dir_000020_000027.html  dir_000022_000017.html  dir_000026_000004.html  dir_000028_000005.html  dir_000028_000011.html  dir_000030_000013.html  dir_0058f9f8930e3f234e27134542bf0d59.html  dir_0058f9f8930e3f234e27134542bf0d59.js  dir_0058f9f8930e3f234e27134542bf0d59_dep.map  dir_0058f9f8930e3f234e27134542bf0d59_dep.md5  dir_01945739458c10315f029035be55b339.html  dir_01945739458c10315f029035be55b339.js  (+174 more)
docs/Lua/: api_lua.hpp
docs/ajuda/: ajuda.md
docs/api_lua/: api_lua.hpp  lua_entidades.hpp  lua_mainpage.md
docs/en/: annotated.html  classes.html  dir_000000_000007.html  (+224 more)
editor/: CMakeLists.txt  editor.hpp
editor/include/: editor.hpp  editor_namespace.hpp  runtime.hash
editor/include/assets/: runtime.hash
editor/include/custom/: barra_menu.hpp~
editor/include/elementos/: botao.hpp  imagem.hpp  texto.hpp
editor/include/sistemas/: bubble_gui.hpp  editor.hpp  gerenciador_projetos.hpp
editor/include/util/: caixa.hpp  caixas.hpp  runtime.hpp
editor/src/: main.cpp  main.cpp~
editor/src/sistemas/: bubble_gui.cpp  editor.cpp  gerenciador_projetos.cpp
editor/src/util/: runtime.cpp
runtime/: CMakeLists.txt
runtime/src/: main.cpp
scripts/: build_editor.sh  build_runtime.sh  run_editor.sh  run_tests.sh
testes/: CMakeLists.txt
testes/assets/: teste_fase.fase
testes/include/: registro_testes.hpp
testes/src/: main.cpp  registro_testes.cpp
(+5277 files in other folders)
